--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "citdbcvic2",
+  "name": "blog-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple blog web project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mysql2": "^3.11.3"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5"
   }
 }
